--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
+    "fast-sort": "^3.4.0",
     "next": "14.0.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.5",
     "typescript": "5.3.2"
+  },
+  "devDependencies": {
+    "daisyui": "^4.4.18"
   }
 }
